--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ timezone: America/Sao_Paulo
 
 title: 4prndz # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: minhas anotações... # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   apenas minha caminhada.
